--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,7 +2,7 @@
    "type": "mssql",
    "host": "localhost",
    "username": "testing123",
-   "password": "$Jehovah113",
+   "password": "*",
    "database": "testingmigration",
    "synchronize": true,
    "logging": false,
